Author List and Detail View

--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -1,5 +1,5 @@
 {% extends "base_generic.html" %}
-
+{% block title%}Book List{% endblock %}
 {% block content %}
   <h1>Book List</h1>
   {% if book_list %}
