--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -17,4 +17,5 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Genre:</strong> {{ num_genres }}</li>
   </ul>
+  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
 {% endblock %}
