--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -35,6 +35,8 @@
           <li>Staff</li>
           {% if perms.catalog.can_mark_returned %}
             <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+            <li><a href="{% url 'author-create' %}">Add Author</a></li>
+            <li><a href="{% url 'book-create' %}">Add Book</a></li>
           {% endif %}
           </ul>
         {% endif %}
