--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -11,6 +11,15 @@
     {% endif %}
   </p>
 
+  {% if user.is_staff %}
+  <ul>
+    {% if perms.catalog.can_mark_returned %}
+      <li><a href="{% url 'author-update' author.id %}">Update Author</a></li>
+      <li><a href="{% url 'author-delete' author.id %}">Delete Author</a></li>
+    {% endif %}
+  </ul>
+  {% endif %}
+
   <div style="margin-left:20px;margin-top:20px">
     <h4>Books</h4>
 
