Added navbar and deleted sidebar

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -6,8 +6,7 @@
 
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, biggest library in <em>Kerala</em>!</p>
+  <h1>Welcome to LocalLibrary, biggest library in <em>Internet</em>!</h1>
   <h2>Dynamic content</h2>
   <p>The library has the following record counts:</p>
   <ul>
