--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,44 +7,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
-  {% load static %}
+  
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2">
-      {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="{% url 'books' %}">All books</a></li>
-          <li><a href="{% url 'authors'%}">All authors</a></li><br>
+
+  {% comment %} Navigation bar {% endcomment %}
+  <nav class="navbar bg-light">
+    <div class="nav-container">
+        <div>
+            <a>Local Library</a>
+        </div>
+        <div class="nav-links">
+            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'books' %}">Catalog</a>
+            <a href="{% url 'authors'%}">Authors</a>
+        </div>
+        <div class="nav-buttons">
           {% if user.is_authenticated %}
-            <li>User: {{ user.get_username }}</li>
-        
-            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
-        
-            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            <button class="dropbtn" onclick="myFunction()">{{ user.get_username }}</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="{% url 'my-borrowed' %}">My Borrowed</a>
+              
+              {% if user.is_staff %}
+                {% if perms.catalog.can_mark_returned %}
+                  <a href="{% url 'all-borrowed' %}">All borrowed</a>
+                  <a href="{% url 'author-create' %}">Add Author</a>
+                  <a href="{% url 'book-create' %}">Add Book</a>
+                {% endif %}
+              {% endif %}
+              <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+            </div>
           {% else %}
-            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            <a href="{% url 'login'%}?next={{request.path}}">Sign in</a>
           {% endif %}
-        </ul>
+        </div>
+    </div>
+  </nav>
 
-        {% if user.is_staff %}
-          <hr />
-          <ul class="sidebar-nav">
-          <li>Staff</li>
-          {% if perms.catalog.can_mark_returned %}
-            <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
-            <li><a href="{% url 'author-create' %}">Add Author</a></li>
-            <li><a href="{% url 'book-create' %}">Add Book</a></li>
-          {% endif %}
-          </ul>
-        {% endif %}
-
-
-     {% endblock %}
-      </div>
+  <div class="container-fluid">
+      
     <div class="col-sm-10 ">
       {% block content %}
       {% endblock %}
@@ -66,7 +69,9 @@
         {% endif %}
       {% endblock pagination %}
     </div>
-    </div>
   </div>
+
+
+  <script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
